--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./asset/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="./asset/modifier.js"></script>
-    <title>Document</title>
+    <title>Toast Message</title>
 </head>
 <body>
     <div id="toast">
